<resources>
    <string name="app_name">GitHubUsers</string>
    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="connection_error">Connection error</string>
    <string name="id_mask">ID: %d</string>
    <string name="login_mask">Login: %s</string>
    <string name="repo_count_mask">Repositories count: %d</string>
    <string name="followers_count_mask">Followers count: %d</string>
    <string name="no_email">No email</string>
    <string name="no_location">No location</string>
    <string name="no_company">No company</string>
    <string name="no_name">No name</string>
    <string name="no_biography">No biography</string>
    <string name="no_url">No url</string>
</resources>
